src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/TestDataCheckDao/bindVariableDirective.sql
INSERT INTO employee
            (employee_id
             , employee_name
             , department_name)
     VALUES ( /* employee.employeeId */0
             , <error descr="Bind variables must be followed by test data">/* employee.employeeName */</error>
             , <error descr="Bind variables must be followed by test data">/* employee.department */</error>)
